add corrections konzept and grundlagen

--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -78,7 +78,7 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 \subsubsection*{Zeitplan}
 	Aus den definierten \gls{ac:ap} wird ein entsprechender Zeitplan erstellt. Dabei wird der chronologische Ablauf des Ablaufplans eingehalten. Wie der Abbildung \vref{img:zeitplan} zu entnehmen ist, werden keine Bufferzeiten eingeplant. Dies weil die Projektdauer bezogen auf die Aufgabenstellung schon knapp ausfällt und daher jede Verzögerung den Erfolg des Projekts gefährden würde.
 	%
-	\image{content/1_einleitung/image/Zeitplan}{scale=1}{htbp}[Zeitplan][img:zeitplan]
+	\image{content/1_einleitung/image/Zeitplan}{scale=1}{htbp}[Zeitplan][img:zeitplan] 
 %
 %
 \subsubsection*{Meilensteine}
@@ -94,6 +94,8 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 		%
 		\item[Abgabe Thesis] Das Abgabedatum der Thesis ist auf den \textbf{30.06.2014} datiert.
 	\end{description}
+%
+Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt \vref{sec:sollist} in Kapitel \vref{ch:validierung} eingegangen.
 %
 %
 \subsection{Verwendete Software}
@@ -126,6 +128,6 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 %
 %
 \section{Angrenzende Projekte}
-Dieses Projekt dient als Grundstein respektive Vorstudie für ein weiterführendes Projekt mit der \gls{ac:EHSM}. Im weiterführenden Projekt soll ein Produkt mit den in Abschnitt \vref{sec:zweck} beschriebenem Ziel entwickelt werden. Im Projekt dieser Arbeit besteht noch keine Zusammenarbeit mit Magglingen. 				
+Dieses Projekt dient als Grundstein respektive Vorstudie für ein weiterführendes Projekt mit der \gls{ac:EHSM}. Im weiterführenden Projekt soll ein Produkt mit den in Abschnitt \vref{sec:zweck} beschriebenem Ziel entwickelt werden. In dieser hier vorliegenden Arbeit besteht noch keine Zusammenarbeit mit Magglingen. 				
 	
 
