--- a/content/5_validierung/validierung.tex
+++ b/content/5_validierung/validierung.tex
@@ -14,7 +14,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Validierung}\label{ch:validierung}\todo{Ergebnis des Projektes}
 \section{Ergebnisse}
-\section{Soll/Ist-Vergleich}\todo{Bezug auf den Zeitplan, Abweichungen erklären}
+\section{Soll/Ist-Vergleich}\label{sec:sollist}\todo{Bezug auf den Zeitplan, Abweichungen erklären}
 \section{Erkenntnisse, Verbesserungen}\todo{eingehen auf Literatur (Gyro, Magnetometer)}
 	\begin{itemize}
 		\item \gls{g:labview} nicht unter Windows 8.x verwenden. Die gesamte Toolchain verhält sich sehr instabil, ins besonders die USB-Treiber für das \gls{g:myrio}. 
