--- a/report.tex
+++ b/report.tex
@@ -25,8 +25,7 @@
 \newcommand{\AutorB}{Simon Grossenbacher}
 \newcommand{\DozentA}{Rolf Vetter}
 \newcommand{\DozentB}{Ivo Oesch}
-\newcommand{\ExpertA}{Andrea Ridolfi}
-\newcommand{\ExpertB}{Dominique Renevey}
+\newcommand{\ExpertA}{Dominique Renevey}
 \newcommand{\Studiengang}{Elektro- und Kommunikationstechnik}
 \newcommand{\Datum}{\the\day.\the\month.\the\year}
 \newcommand{\Ort}{Burgdorf}
